@@ -1,3 +1,8 @@
+2005-03-30  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/DevDiscover/Paradyne.pm:
+	New discovery parameter: "Paradyne::slot-name"
+
 2005-03-22  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* configure.ac: New variables: plugwrapperdir, defrrddir
